[gd_scene load_steps=6 format=3 uid="uid://b4wfw7qxb5672"]

[ext_resource type="Theme" uid="uid://yqmay0cd53tl" path="res://ui/MetalPixel.tres" id="1_5hn7r"]
[ext_resource type="Script" path="res://scenes/ui/spawn_unit_button.gd" id="2_jrkrg"]
[ext_resource type="SpriteFrames" uid="uid://cyyxexeug0gg1" path="res://graphics/animations/GolemBig_SpriteFrames.tres" id="2_vpyc5"]
[ext_resource type="Resource" uid="uid://b5lq16gs61htq" path="res://scenes/characters/characterData/GolemBig_UnitData.tres" id="3_2oyb7"]
[ext_resource type="PackedScene" uid="uid://dia1pf7g5yerl" path="res://scenes/ui/resource_with_count_ui.tscn" id="5_q6s34"]

[node name="SpawnUnitButton" type="Button" node_paths=PackedStringArray("animatedSprite", "textLabel", "itemsWithCount")]
custom_minimum_size = Vector2(147.08, 64)
theme = ExtResource("1_5hn7r")
text = "
"
script = ExtResource("2_jrkrg")
unitData = ExtResource("3_2oyb7")
animatedSprite = NodePath("Control/AnimatedSprite2D")
textLabel = NodePath("RichTextLabel")
itemsWithCount = [NodePath("GridContainer/ResourceWithCount"), NodePath("GridContainer/ResourceWithCount2"), NodePath("GridContainer/ResourceWithCount3"), NodePath("GridContainer/ResourceWithCount4")]

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -13.0
offset_right = 32.0
offset_bottom = 32.0
grow_vertical = 2
mouse_filter = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Control"]
position = Vector2(17, 20)
sprite_frames = ExtResource("2_vpyc5")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 14.0
offset_top = 3.0
offset_bottom = 20.0
grow_horizontal = 2
mouse_filter = 1
text = "Big Golem"

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 22.0
offset_right = 140.0
offset_bottom = 62.0
columns = 2

[node name="ResourceWithCount" parent="GridContainer" instance=ExtResource("5_q6s34")]
visible = false
layout_mode = 2

[node name="ResourceWithCount2" parent="GridContainer" instance=ExtResource("5_q6s34")]
visible = false
layout_mode = 2

[node name="ResourceWithCount3" parent="GridContainer" instance=ExtResource("5_q6s34")]
visible = false
layout_mode = 2

[node name="ResourceWithCount4" parent="GridContainer" instance=ExtResource("5_q6s34")]
visible = false
layout_mode = 2

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
